--- a/readme.Rmd
+++ b/readme.Rmd
@@ -1,6 +1,7 @@
-Independent Lateralization of Language, Attention, and Numerical
-Cognition Across Task and Rest
-================
+---
+title: "Independent Lateralization of Language, Attention, and Numerical Cognition Across Task and Rest" 
+output: github_document
+---
 
 <!-- [![DOI](https://zenodo.org/badge/965483781.svg)](https://doi.org/10.5281/zenodo.15207453) -->
 
@@ -8,57 +9,27 @@ Cognition Across Task and Rest
 
 ## Contents
 
-- [Background](#background)
-- [Reference](#reference)
-- [Code Release](#code-release)
-- [Data](#data) <!-- -   [Atlas Used](#atlas-used) -->
-- [Other related papers that might interest
-  you](#other-related-papers-that-might-interest-you)
-- [Questions](#questions)
+-   [Background](#background)
+-   [Reference](#reference)
+-   [Code Release](#code-release)
+-   [Data](#data)
+<!-- -   [Atlas Used](#atlas-used) -->
+-   [Other related papers that might interest you](#other-related-papers-that-might-interest-you)
+-   [Questions](#questions)
 
 ------------------------------------------------------------------------
 
-## Background
+## Background {#background}
 
-**Hemispheric functional complementarity** is a *core organizational
-principle of the human brain*, yet the extent to which lateralization in
-**one domain constrains that of others** remains unclear. Two main
-accounts have been proposed: the *causal hypothesis*, in which dominance
-for one function drives complementary dominance in another, and the
-*statistical hypothesis*, in which each function lateralizes
-independently. Using *multimodal fMRI in 287 participants* from the
-[BIL&GIN](https://doi.org/10.1016/j.neuroimage.2015.02.071) cohort, **we
-examined whether language lateralization phenotypes, defined as typical
-(left-dominant) or atypical (right-dominant), predict hemispheric
-asymmetries in visuospatial attention and numerical cognition**.
-Task-based activation was measured during *line bisection, mental
-calculation, and numerical interval comparison*, and analyzed within
-domain-specific, functionally defined network atlases. Resting-state
-*functional connectivity* metrics were also assessed in the same
-networks. Across both attention and numerical domains, typical
-individuals for language showed stronger asymmetries, whereas atypical
-individuals exhibited weaker, more bilateral patterns. Critically,
-atypical participants did not show mirror-reversed asymmetries, and
-language phenotype did not influence intrinsic connectivity metrics in
-non-language networks. These findings **challenge** the notion that
-atypical lateralization represents an inversion of the canonical
-template and argue against a **universal reciprocal link between
-language dominance and other cognitive domains**. Instead, our results
-support a domain-specific model in which lateralization profiles are
-shaped by distinct developmental and functional constraints,
-highlighting the **need for multimodal, multi-domain approaches to brain
-asymmetry**.
+**Hemispheric functional complementarity** is a *core organizational principle of the human brain*, yet the extent to which lateralization in **one domain constrains that of others** remains unclear. Two main accounts have been proposed: the *causal hypothesis*, in which dominance for one function drives complementary dominance in another, and the *statistical hypothesis*, in which each function lateralizes independently. Using *multimodal fMRI in 287 participants* from the [BIL&GIN](https://doi.org/10.1016/j.neuroimage.2015.02.071) cohort, **we examined whether language lateralization phenotypes, defined as typical (left-dominant) or atypical (right-dominant), predict hemispheric asymmetries in visuospatial attention and numerical cognition**. Task-based activation was measured during *line bisection, mental calculation, and numerical interval comparison*, and analyzed within domain-specific, functionally defined network atlases. Resting-state *functional connectivity* metrics were also assessed in the same networks. Across both attention and numerical domains, typical individuals for language showed stronger asymmetries, whereas atypical individuals exhibited weaker, more bilateral patterns. Critically, atypical participants did not show mirror-reversed asymmetries, and language phenotype did not influence intrinsic connectivity metrics in non-language networks. These findings **challenge** the notion that atypical lateralization represents an inversion of the canonical template and argue against a **universal reciprocal link between language dominance and other cognitive domains**. Instead, our results support a domain-specific model in which lateralization profiles are shaped by distinct developmental and functional constraints, highlighting the **need for multimodal, multi-domain approaches to brain asymmetry**.
 
 ------------------------------------------------------------------------
 
-## Reference
+## Reference {#reference}
 
 For usage of the ***manuscript***, please cite:
 
-- **Labache, L.**, Hesling, I., & Zago, L. (2025). Independent
-  Lateralization of Language, Attention, and Numerical Cognition Across
-  Task and Rest. *BioRxiv*. DOI:
-  [10.1101/2025.11.23.690045](https://doi.org/10.1101/2025.11.23.690045)
+-   **Labache, L.**, Hesling, I., & Zago, L. (2025). Independent Lateralization of Language, Attention, and Numerical Cognition Across Task and Rest. *BioRxiv*. DOI: [10.1101/2025.11.23.690045](https://doi.org/10.1101/2025.11.23.690045)
 
 For usage of the associated ***code***, please also cite:
 
@@ -66,34 +37,42 @@ For usage of the associated ***code***, please also cite:
 
 ------------------------------------------------------------------------
 
-## Code Release
+## Code Release {#code-release}
 
 <!-- The `Script` folder includes five `R` scripts. These `R` scripts are designed to facilitate the replication of results as detailed in the `Method Section` of the **manuscript**. -->
+
 <!-- -   `1_CCA.R`: `R` script to conduct the Canonical Correlation Analysis (CCA) to assess the functional cortical lateralization – neurotransmitters density asymmetries associations. -->
 <!-- -   `2_MolecularPhenotypes_Analysis.R`: `R` script to identify the molecular biomarkers spatially correlated to the acetylcholine-norepinephrine axis. -->
 <!-- -   `3_CellularSubtypes_Analysis.R`: `R` script to explore the multimodal cellular underpinning of the acetylcholine-norepinephrine axis. -->
 <!-- -   `4_NetworkProfil_Analysis.R`: `R` script to identify the mitochondrial and cellular fingerprints of large-scale brain networks. -->
 <!-- -   `5_SørensenDiceIndex_NetworksComparison.R`: `R` script to compute similarities between the identified clusters’ topography and a set of task-defined networks using the Sørensen-Dice index (SDI). -->
+
 <!-- Note that the `R` scripts also contain the code **to reproduce the figures found in the manuscript**. The brain renderings in the paper require [Surf Ice](https://www.nitrc.org/projects/surfice/). -->
 
 ------------------------------------------------------------------------
 
-## Data
+## Data {#data}
 
-All the data necessary to reproduce the results are available in the
-`Data` folder.
+All the data necessary to reproduce the results are available in the `Data` folder.
 
 <!-- -   `4tasks_typicalStrong_370ROIs_AICHA.csv` corresponds to the average brain activity of 125 strongly typical participants (see [Labache, L., et al. 2020](https://doi.org/10.7554/eLife.58722)) during three language tasks and a visuospatial attention task in each of the 370 regions of the AICHA atlas. `4tasks_typicalStrong_185ROIs_AICHA_asym.csv` corresponds to the asymmetry for each of the 185 regions of the AICHA atlas during these four tasks. -->
+
 <!-- -   `19neurotransmitters_163ROIs_AICHA_asym_zScored.csv` corresponds to the asymmetry of the 19 neurotransmitter systems maps (see [Hansen, J. Y., et al. 2022](https://doi.org/10.1038/s41593-022-01186-3)) for each of the 163 regions of the AICHA atlas. `19neurotransmitters_384ROIs_AICHA_zScored.csv` corresponds to the left and right values of the 19 neurotransmitter maps for each of the 384 regions of the AICHA atlas. -->
+
 <!-- -   `24_CellularSubtypes_304ROIs_AICHA_zscored.csv` corresponds to 24 cell-type maps (see [Zhang, X-H., et al. 2024](https://doi.org/10.1038/s41593-024-01812-2)) for each of the 304 regions of the AICHA atlas. -->
+
 <!-- -   `MitoDMap_384ROIs_AICHA_zscored.csv`, `MRC_384ROIs_AICHA_zscored.csv`, and `TRC_384ROIs_AICHA_zscored.csv` corresponds to three mitochondrial phenotypes maps (see [Mosharov, E. V., et al. 2025](https://doi.org/10.1038/s41586-025-08740-6)) for each of the 384 regions of the AICHA atlas. -->
+
 <!-- -   `modeOne_CCA_163ROIs_AICHA.csv` corresponds to the CCA weights (assymetries) for the neurotransmitter and task modes for each of the 163 regions of the AICHA atlas. -->
+
 <!-- -   `SynapticDensityMap_384ROIs_AICHA_zscored.csv` corresponds to the synaptic density map (see [Johansen, A., et al. 2024](https://doi.org/10.1523/JNEUROSCI.1750-23.2024)) for each of the 384 regions of the AICHA atlas. -->
 
 ------------------------------------------------------------------------
 
 <!-- ## Atlas Used {#atlas-used} -->
+
 <!-- The atlases used in the paper are available in the `Atlas` folder. -->
+
 <!-- -   `Atlas/AICHA` contains the **AICHA** atlas, a functional brain ROIs atlas (384 brain regions) based on resting-state fMRI data acquired in 281 individuals. AICHA regions cover the whole brain, each regions are characterized by: 1) their homogeneity of its constituting voxels intrinsic activity, and 2) a unique homotopic contralateral counterpart with which it has maximal intrinsic connectivity. Full description of the atlas can be found there: [AICHA](https://www.gin.cnrs.fr/en/tools/aicha/), and the related paper there: [Joliot, M., et al. 2015](https://doi.org/10.1016/j.jneumeth.2015.07.013). -->
 <!--     -   The version of AICHA used in the paper corresponds to the file `AICHA.nii` (MNI ICBM 152 space). `AICHA_description.txt` is a description of each atlas' regions. `comparison_AICHA_Yan2023_400_2mm.txt` provides the correspondance between the AICHA regions and the seven canonical intrinsic network as defined by Yan and colleagues [Yan, X., et al. 2023](https://doi.org/10.1016/j.neuroimage.2023.120010). The compressed file `permutation_23k_AICHA.zip` contains the files `permutation_23k_AICHA_Seed1893.csv` and `permutation_23k_AICHA_Seed1942.csv`. Those are null maps used during the "*spin test*". They have been generated with the [netneurotools](https://github.com/netneurolab/netneurotools) `Python` toolbox (release `0.2.5`). -->
 <!-- -   `Atlas/ALANs` contains **ALANs**, an atlas of the *Lateralized visuospatial Attentional Networks* in standardized MNI volume space (`ALANs_MNI_ICBM_152_2mm.nii`). -->
@@ -102,31 +81,15 @@ All the data necessary to reproduce the results are available in the
 
 ------------------------------------------------------------------------
 
-## Other related papers that might interest you
+## Other related papers that might interest you {#other-related-papers-that-might-interest-you}
 
-- Sentence Supramodal Areas Atlas; Labache, L., et al. 2019. DOI:
-  [10.1007/s00429-018-1810-2](https://doi.org/10.1007/s00429-018-1810-2),
-  and related GitHub repository:
-  [SENSAAS](https://github.com/loiclabache/SENSAAS_brainAtlas)
-- Lateralized visuospatial Attentional Networks; Labache, L., et
-  al. 2024. DOI:
-  [10.1162/imag_a_00208](https://doi.org/10.1162/imag_a_00208), and
-  related GitHub repository:
-  [ALANs](https://github.com/loiclabache/ALANs_brainAtlas)
-- Influence of Language Lateralisation on Gradient Asymmetry: Labache,
-  L., et al. 2023. DOI:
-  [10.1038/s41467-023-39131-y](https://doi.org/10.1038/s41467-023-39131-y),
-  and related GitHub repository:
-  [Labache_2022_AO](https://github.com/loiclabache/Labache_2022_AO)
-- IThe molecular and cellular underpinnings of human brain
-  lateralization: Labache, L., et al. 2025. DOI:
-  [10.1101/2025.04.11.648388](https://doi.org/10.1101/2025.04.11.648388),
-  and related GitHub repository:
-  [Labache_2025_MolCelLat](https://github.com/loiclabache/Labache_2025_MolCelLat)
+-   Sentence Supramodal Areas Atlas; Labache, L., et al. 2019. DOI: [10.1007/s00429-018-1810-2](https://doi.org/10.1007/s00429-018-1810-2), and related GitHub repository: [SENSAAS](https://github.com/loiclabache/SENSAAS_brainAtlas)
+-   Lateralized visuospatial Attentional Networks; Labache, L., et al. 2024. DOI: [10.1162/imag_a_00208](https://doi.org/10.1162/imag_a_00208), and related GitHub repository: [ALANs](https://github.com/loiclabache/ALANs_brainAtlas)
+-   Influence of Language Lateralisation on Gradient Asymmetry: Labache, L., et al. 2023. DOI: [10.1038/s41467-023-39131-y](https://doi.org/10.1038/s41467-023-39131-y), and related GitHub repository: [Labache_2022_AO](https://github.com/loiclabache/Labache_2022_AO)
+-   IThe molecular and cellular underpinnings of human brain lateralization: Labache, L., et al. 2025. DOI: [10.1101/2025.04.11.648388](https://doi.org/10.1101/2025.04.11.648388), and related GitHub repository: [Labache_2025_MolCelLat](https://github.com/loiclabache/Labache_2025_MolCelLat)
 
 ------------------------------------------------------------------------
 
-## Questions
+## Questions {#questions}
 
-Please contact me (Loïc Labache) at: <loic.labache@rutgers.edu> and/or
-<loic.labache@ensc.fr>
+Please contact me (Loïc Labache) at: [loic.labache\@rutgers.edu](mailto:loic.labache@rutgers.edu){.email} and/or [loic.labache\@ensc.fr](mailto:loic.labache@ensc.fr){.email}
